OPENNLP-1596 Modernize immutable collection creation